# DesktopCommanderPy

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: security_config.yaml
core/: __init__.py  runtime_config.py  server.py
core/tools/: __init__.py  config_tools.py  filesystem.py  hana.py  process.py  process_sessions.py  session_manager.py  terminal.py  utils.py
docs/: hana_trial_setup.md
tests/: test_basic.py
