[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktopcommanderpy"
version = "0.1.0"
description = "Custom MCP Server in Python - secure, extensible alternative to Desktop Commander"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Eduardo Abdul Malik Arias" }
]
keywords = ["mcp", "claude", "ai", "automation", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "aiofiles>=23.0",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
desktopcommanderpy = "main:main"
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
